[package]
name = "lumenmq"
version = "0.1.0"
edition = "2021"
authors = ["LumenMQ Contributors"]
license = "Apache-2.0"
description = "LumenMQ — Lightweight Industrial MQTT Broker Written in Rust"
repository = "https://github.com/lumen-mq/lumen-mq"
keywords = ["mqtt", "mqtt-broker", "iot", "industrial-iot", "tokio"]
categories = ["network-programming", "asynchronous"]

[[bin]]
name = "lumenmq"
path = "src/main.rs"

[lib]
name = "lumenmq"
path = "src/lib.rs"

[dependencies]
# 异步运行时
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.6"
futures = "0.3"
pin-project-lite = "0.2"

# 并发安全
dashmap = "6.0"
arc-swap = "1.7"
parking_lot = "0.12"
once_cell = "1.19"

# 协议编解码辅助
bitflags = "2.6"

# 配置管理
serde = { version = "1", features = ["derive"] }
toml = "0.8"
config = { version = "0.14", default-features = false, features = ["toml"] }

# 错误体系
thiserror = "1.0"
anyhow = "1.0"

# 日志追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# 工具
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4"] }

# 阶段三：TLS / WebSocket / 持久化存储
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.1"
tokio-tungstenite = "0.23"
sled = "0.34"
serde_json = "1"

# 阶段四：消息插件 HTTP 转发
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22"

# 阶段五：Admin HTTP 运维 API
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "ws"] }
hyper = { version = "1", features = ["http1", "server"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[dev-dependencies]
tempfile = "3"
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
tower = { version = "0.5", default-features = false }
